# infinityper

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
src/: main.rs
