[package]
name = "infinityper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
calm_io = "0.1.1"
colorful = "0.2.2"
structopt = "0.3.26"

[profile.release]
lto = true
panic = 'abort'
